[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://modules/keyboard/keyboard.gd" type="Script" id=2]



[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.458824, 0.372549, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="keyboard" type="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 297.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GRAVE" type="Button" parent="."]
anchor_left = 0.0657911
anchor_top = 0.0538721
anchor_right = 0.112666
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "~"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="tab" type="Button" parent="."]
anchor_left = 0.0657911
anchor_top = 0.239057
anchor_right = 0.148799
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "TAB"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="caps" type="Button" parent="."]
anchor_left = 0.0657911
anchor_top = 0.424243
anchor_right = 0.155634
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "CAPS"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="shiftL" type="Button" parent="."]
anchor_left = 0.0657911
anchor_top = 0.609427
anchor_right = 0.184932
anchor_bottom = 0.767677
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "SHIFT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ctrlL" type="Button" parent="."]
anchor_left = 0.0657911
anchor_top = 0.794613
anchor_right = 0.124385
anchor_bottom = 0.952861
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "CTRL"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="1" type="Button" parent="."]
anchor_left = 0.127315
anchor_top = 0.0538721
anchor_right = 0.17419
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="2" type="Button" parent="."]
anchor_left = 0.183956
anchor_top = 0.0538721
anchor_right = 0.230831
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="3" type="Button" parent="."]
anchor_left = 0.241572
anchor_top = 0.0538721
anchor_right = 0.288447
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="4" type="Button" parent="."]
anchor_left = 0.298212
anchor_top = 0.0538721
anchor_right = 0.345087
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="5" type="Button" parent="."]
anchor_left = 0.354854
anchor_top = 0.0538721
anchor_right = 0.401729
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "5"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="6" type="Button" parent="."]
anchor_left = 0.411494
anchor_top = 0.0538721
anchor_right = 0.458369
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "6"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="7" type="Button" parent="."]
anchor_left = 0.468134
anchor_top = 0.0538721
anchor_right = 0.51501
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "7"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="8" type="Button" parent="."]
anchor_left = 0.524776
anchor_top = 0.0538721
anchor_right = 0.571651
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "8"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="9" type="Button" parent="."]
anchor_left = 0.581416
anchor_top = 0.0538721
anchor_right = 0.628291
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "9"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="0" type="Button" parent="."]
anchor_left = 0.638057
anchor_top = 0.0538721
anchor_right = 0.684932
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Q" type="Button" parent="."]
anchor_left = 0.157587
anchor_top = 0.239057
anchor_right = 0.204462
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "q"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="A" type="Button" parent="."]
anchor_left = 0.164423
anchor_top = 0.424243
anchor_right = 0.211298
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "a"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Z" type="Button" parent="."]
anchor_left = 0.194697
anchor_top = 0.609427
anchor_right = 0.241572
anchor_bottom = 0.767677
custom_fonts/font = SubResource( 2 )
text = "z"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="W" type="Button" parent="."]
anchor_left = 0.213253
anchor_top = 0.239057
anchor_right = 0.260128
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "w"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="S" type="Button" parent="."]
anchor_left = 0.220087
anchor_top = 0.424243
anchor_right = 0.266962
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "s"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="X" type="Button" parent="."]
anchor_left = 0.250362
anchor_top = 0.609427
anchor_right = 0.297237
anchor_bottom = 0.767677
custom_fonts/font = SubResource( 2 )
text = "x"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="E" type="Button" parent="."]
anchor_left = 0.269892
anchor_top = 0.239057
anchor_right = 0.316768
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "e"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="D" type="Button" parent="."]
anchor_left = 0.276728
anchor_top = 0.424243
anchor_right = 0.323604
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "d"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="C" type="Button" parent="."]
anchor_left = 0.307003
anchor_top = 0.609427
anchor_right = 0.353878
anchor_bottom = 0.767677
custom_fonts/font = SubResource( 2 )
text = "c"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="R" type="Button" parent="."]
anchor_left = 0.326533
anchor_top = 0.239057
anchor_right = 0.373408
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "r"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="F" type="Button" parent="."]
anchor_left = 0.333369
anchor_top = 0.424243
anchor_right = 0.380244
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "f"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="V" type="Button" parent="."]
anchor_left = 0.363643
anchor_top = 0.609427
anchor_right = 0.410518
anchor_bottom = 0.767677
custom_fonts/font = SubResource( 2 )
text = "v"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="T" type="Button" parent="."]
anchor_left = 0.383173
anchor_top = 0.239057
anchor_right = 0.430048
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "t"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="G" type="Button" parent="."]
anchor_left = 0.390009
anchor_top = 0.424243
anchor_right = 0.436884
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "g"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="B" type="Button" parent="."]
anchor_left = 0.420283
anchor_top = 0.609427
anchor_right = 0.467158
anchor_bottom = 0.767677
custom_fonts/font = SubResource( 2 )
text = "b"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Y" type="Button" parent="."]
anchor_left = 0.439814
anchor_top = 0.239057
anchor_right = 0.486689
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "y"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="H" type="Button" parent="."]
anchor_left = 0.446651
anchor_top = 0.424243
anchor_right = 0.493526
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "h"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="N" type="Button" parent="."]
anchor_left = 0.477576
anchor_top = 0.611674
anchor_right = 0.524451
anchor_bottom = 0.769922
custom_fonts/font = SubResource( 2 )
text = "n"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="U" type="Button" parent="."]
anchor_left = 0.496455
anchor_top = 0.239057
anchor_right = 0.54333
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "u"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="J" type="Button" parent="."]
anchor_left = 0.503291
anchor_top = 0.424243
anchor_right = 0.550166
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "j"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="M" type="Button" parent="."]
anchor_left = 0.534215
anchor_top = 0.611674
anchor_right = 0.58109
anchor_bottom = 0.769922
custom_fonts/font = SubResource( 2 )
text = "m"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="I" type="Button" parent="."]
anchor_left = 0.553095
anchor_top = 0.239057
anchor_right = 0.59997
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "i"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="K" type="Button" parent="."]
anchor_left = 0.559932
anchor_top = 0.424243
anchor_right = 0.606807
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "k"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="COMMA" type="Button" parent="."]
anchor_left = 0.590856
anchor_top = 0.611674
anchor_right = 0.637731
anchor_bottom = 0.769922
custom_fonts/font = SubResource( 2 )
text = ","
__meta__ = {
"_edit_use_anchors_": true
}

[node name="O" type="Button" parent="."]
anchor_left = 0.609736
anchor_top = 0.239057
anchor_right = 0.656611
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "o"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="L" type="Button" parent="."]
anchor_left = 0.616572
anchor_top = 0.424243
anchor_right = 0.663447
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "l"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PERIOD" type="Button" parent="."]
anchor_left = 0.647497
anchor_top = 0.611674
anchor_right = 0.694372
anchor_bottom = 0.769922
custom_fonts/font = SubResource( 2 )
text = "."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="P" type="Button" parent="."]
anchor_left = 0.666377
anchor_top = 0.237468
anchor_right = 0.713252
anchor_bottom = 0.395717
custom_fonts/font = SubResource( 2 )
text = "p"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SEMI" type="Button" parent="."]
anchor_left = 0.673213
anchor_top = 0.424243
anchor_right = 0.720088
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = ";"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MINUS" type="Button" parent="."]
anchor_left = 0.695313
anchor_top = 0.0538721
anchor_right = 0.742188
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LBRACKET" type="Button" parent="."]
anchor_left = 0.723632
anchor_top = 0.239057
anchor_right = 0.770507
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "["
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EQUALS" type="Button" parent="."]
anchor_left = 0.751953
anchor_top = 0.0538721
anchor_right = 0.798828
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "="
__meta__ = {
"_edit_use_anchors_": true
}

[node name="backspace" type="Button" parent="."]
anchor_left = 0.808594
anchor_top = 0.0538721
anchor_right = 0.890625
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "BCK"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RBRACKET" type="Button" parent="."]
anchor_left = 0.780273
anchor_top = 0.239057
anchor_right = 0.827148
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "]"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BSLASH" type="Button" parent="."]
anchor_left = 0.836914
anchor_top = 0.239057
anchor_right = 0.890625
anchor_bottom = 0.397306
custom_fonts/font = SubResource( 2 )
text = "\\"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="APOSTROPHE" type="Button" parent="."]
anchor_left = 0.729854
anchor_top = 0.424243
anchor_right = 0.776729
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "'"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="enter" type="Button" parent="."]
anchor_left = 0.786494
anchor_top = 0.424243
anchor_right = 0.89001
anchor_bottom = 0.582492
custom_fonts/font = SubResource( 2 )
text = "ENTER"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FSLASH" type="Button" parent="."]
anchor_left = 0.704137
anchor_top = 0.611674
anchor_right = 0.751012
anchor_bottom = 0.769922
custom_fonts/font = SubResource( 2 )
text = "/"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="shiftR" type="Button" parent="."]
anchor_left = 0.761104
anchor_top = 0.612794
anchor_right = 0.89001
anchor_bottom = 0.771043
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "SHIFT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="function" type="Button" parent="."]
anchor_left = 0.135201
anchor_top = 0.794613
anchor_right = 0.193794
anchor_bottom = 0.952861
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "FN"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="altL" type="Button" parent="."]
anchor_left = 0.203486
anchor_top = 0.794613
anchor_right = 0.262079
anchor_bottom = 0.952861
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "ALT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="altR" type="Button" parent="."]
anchor_left = 0.694372
anchor_top = 0.794613
anchor_right = 0.752966
anchor_bottom = 0.952861
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "ALT"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="tool" type="Button" parent="."]
anchor_left = 0.763708
anchor_top = 0.794613
anchor_right = 0.822302
anchor_bottom = 0.952861
custom_fonts/font = SubResource( 2 )
text = "TOOL"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ctrlR" type="Button" parent="."]
anchor_left = 0.833008
anchor_top = 0.794613
anchor_right = 0.889648
anchor_bottom = 0.952862
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "CTRL"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="hideKeyboard" type="Button" parent="."]
anchor_left = 0.918634
anchor_top = 0.053872
anchor_right = 0.975275
anchor_bottom = 0.212121
custom_fonts/font = SubResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SPACE" type="Button" parent="."]
anchor_left = 0.269531
anchor_top = 0.794613
anchor_right = 0.68457
anchor_bottom = 0.952862
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
